In this commit, we got the address line autocomplete working. The problem was with the modal layering over the working functions, making them invisible to the user. We fixed this by ramping up the z-value of the modal fields and making them !important. - Collin H

--- a/src/app/components/sign-up-modal/sign-up-modal.component.css
+++ b/src/app/components/sign-up-modal/sign-up-modal.component.css
@@ -2,12 +2,26 @@
     font-family: "Overpass",sans-serif;
    
 }
+
+/*  These ng-deep styles are necessary to make the autocomplete functionality
+    visible above the bootstrap modal. */
+::ng-deep .modal {
+    z-index: 1001 !important;
+} 
+
+::ng-deep .modal-backdrop {
+    z-index: 1000 !important;
+}
+
+::ng-deep .pac-container {
+    z-index: 1055 !important;
+}
+
 .signup{
     cursor:pointer;
     display:inline-block;
     width: 70px;
 }
-
 
 label{
     margin-left:10px;
